--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "application-name",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "yamljs":             "0.2.6",
     "del":                "^2.2.0",
     "gulp-twig":          "^0.5.0",
     "browser-sync":       "^2.11.1",
