--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "application-name",
-  "version": "0.2.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "name": "easy-frontend",
+  "version": "0.3.0",
+  "description": "Easy-frontend is an automatic system for build html, svg, css, and javascript based projects",
+  "author": "romanVia",
+  "license": "MIT",
+  "devDependencies": {
     "yamljs":             "^0.2.6",
     "del":                "^2.2.0",
     "gulp-twig":          "^0.5.0",
@@ -13,7 +13,7 @@
     "gulp-svgstore":      "^6.0.0",
     "gulp-svgmin":        "^1.2.2",
     "gulp-rename":        "^1.2.2",
-    "gulp-autoprefixer":  "^2.1.0",
+    "gulp-autoprefixer":  "^3.1.0",
     "gulp-imagemin":      "^2.2.1",
     "gulp-clean-css":     "^2.0.3",
     "gulp-rigger":        "^0.5.8",
