--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "easy-frontend",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Easy-frontend is an automatic system for build html, svg, css, and javascript based projects",
   "author": "romanVia",
   "license": "MIT",
   "devDependencies": {
-    "browser-sync":       "^2.11.1",
-    "yamljs":             ">=0.2.6",
-    "del":                "^2.2.0",
-    "gulp":               "^3.8.11",
-    "gulp-if":            "^2.0.0",
-    "gulp-twig":          "^0.5.0",
-    "gulp-htmlmin":       "^1.3.0",
-    "gulp-svgstore":      "^6.0.0",
-    "gulp-svgmin":        ">=1.2.2",
-    "gulp-rename":        "^1.2.2",
-    "gulp-autoprefixer":  "^3.1.0",
-    "gulp-imagemin":      "^2.2.1",
-    "gulp-clean-css":     ">=2.0.3",
-    "gulp-rigger":        "^0.5.8",
-    "gulp-scss":          "^1.3.17",
-    "gulp-sourcemaps":    "^1.5.0",
-    "gulp-uglify":        ">=1.1.0",
-    "imagemin-pngquant":  "^4.2.2"
+    "browser-sync": "^2.11.1",
+    "del": "^2.2.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": ">=2.0.3",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
+    "gulp-scss": "^1.3.17",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-svgmin": ">=1.2.2",
+    "gulp-svgstore": "^6.0.0",
+    "gulp-twig": "^0.5.0",
+    "gulp-uglify": ">=1.1.0",
+    "imagemin-pngquant": "^4.2.2",
+    "run-sequence": "^1.1.5",
+    "yamljs": ">=0.2.6"
   }
 }
