--- a/config.yml
+++ b/config.yml
@@ -13,7 +13,7 @@ image:
 
 # VENDOR PREFIX AUTO ADDING SETTINGS ----------------------------------------------------------------------------------
 autoprefixer:
-  browsers:     [last 2 versions, ie 8, ie 9]
+  browsers:     [last 2 versions, safari 5, ie 8, ie 9, opera 12.1, ios 6, android 4]
   cascade:      false
 
 # BUILT FILES MINIMIZATION --------------------------------------------------------------------------------------------
@@ -33,6 +33,7 @@ browserSync:
 #  tunnel:       true
 #  host:         myhost
 #  port:         9000
+#  proxy:        yourlocal.dev
   logPrefix:    BROWSER
 
 # CDN REFERENCES FOR STYLES -------------------------------------------------------------------------------------------
@@ -61,6 +62,7 @@ dest:
   script:       'build'
   image:        'build/img'
   inlineSvg:    'build/imgi'
+  map:          './maps'
 
 # FOLDERS OF SOURCE FILES FOR BUILDING --------------------------------------------------------------------------------
 src:
