--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license":      "MIT",
   "devDependencies": {
     "yamljs":             ">=0.2.6",
-    "browser-sync":       "~2.11.1",
+    "browser-sync":       "~2.12.3",
     "imagemin-pngquant":  "~4.2.2",
     "del":                "^2.2.0",
     "gulp-autoprefixer":  "^3.1.0",
@@ -16,7 +16,7 @@
     "gulp-imagemin":      "^2.2.1",
     "gulp-rename":        "^1.2.2",
     "gulp-rigger":        "^0.5.8",
-    "gulp-scss":          "^1.3.17",
+    "gulp-sass":          "^2.3.1",
     "gulp-sourcemaps":    "^1.5.0",
     "gulp-svgmin":        ">=1.2.2",
     "gulp-svgstore":      "^6.0.0",
