--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name":         "easy-frontend",
-  "version":      "0.4.1",
-  "description":  "Easy-frontend is an automatic system for build html, svg, css, and javascript based projects",
-  "author":       "romanVia",
+  "name":         "trueFrontend",
+  "version":      "0.5.0",
+  "description":  "trueFontend is an automatic system for build html, svg, css, and javascript based projects",
+  "author":       "ma1oy",
   "license":      "MIT",
   "devDependencies": {
-    "yamljs":             ">=0.2.6",
-    "browser-sync":       "~2.12.3",
-    "imagemin-pngquant":  "~4.2.2",
-    "del":                "^2.2.0",
-    "gulp-autoprefixer":  "^3.1.0",
-    "gulp-clean-css":     ">=2.0.3",
-    "gulp-htmlmin":       "^1.3.0",
-    "gulp-if":            "^2.0.0",
-    "gulp-imagemin":      "^2.2.1",
-    "gulp-rename":        "^1.2.2",
-    "gulp-rigger":        "^0.5.8",
-    "gulp-sass":          "^2.3.1",
-    "gulp-sourcemaps":    "^1.5.0",
-    "gulp-svgmin":        ">=1.2.2",
-    "gulp-svgstore":      "^6.0.0",
-    "gulp-twig":          "^0.5.0",
-    "gulp-uglify":        ">=1.1.0"
+    "babel-core":          ">=6.7.7",
+    "babel-preset-es2015": ">=6.6.0",
+    "yamljs":              ">=0.2.7",
+    "browser-sync":        "~2.12.3",
+    "imagemin-pngquant":   "^4.2.2",
+    "del":                 "^2.2.0",
+    "gulp-autoprefixer":   "^3.1.0",
+    "gulp-clean-css":      ">=2.0.6",
+    "gulp-htmlmin":        "^1.3.0",
+    "gulp-if":             "^2.0.0",
+    "gulp-imagemin":       "^2.2.1",
+    "gulp-rename":         "^1.2.2",
+    "gulp-rigger":         "^0.5.8",
+    "gulp-sass":           "^2.3.1",
+    "gulp-sourcemaps":     ">=2.0.0-alpha",
+    "gulp-svgmin":         ">=1.2.2",
+    "gulp-svgstore":       "^6.0.0",
+    "gulp-twig":           "^0.5.0",
+    "gulp-uglify":         ">=1.1.0"
   }
 }
