--- a/config.yml
+++ b/config.yml
@@ -1,73 +1,84 @@
-# METADATA FOR PROJECT ------------------------------------------------------------------------------------------------
-meta:
-  lang:         en
-  title:        New document
-  description:  Easy frontend
-  author:       romanVia
+################################################## PROJECT SETTINGS ###################################################
 
-# IMAGES SETTINGS -----------------------------------------------------------------------------------------------------
-image:
-  favicon:      img/favicon.png
-  imageSrc:     #img/...
-  inlineSvg:    true
+prj:
+  # PAGE METADATA -----------------------------------------------------------------------------------------------------
+  meta:
+    lang:         en
+    title:        New document
+    description:  True frontend
+    author:       ma1oy
 
-# VENDOR PREFIX AUTO ADDING SETTINGS ----------------------------------------------------------------------------------
-autoprefixer:
-  browsers:     [last 2 versions, safari 5, ie 8, ie 9, opera 12.1, ios 6, android 4]
-  cascade:      false
+  # IMAGES SETTINGS ---------------------------------------------------------------------------------------------------
+  image:
+    favicon:      img/favicon.png
+    imageSrc:     #img/...
+    inlineSvg:    true
 
-# BUILT FILES MINIMIZATION --------------------------------------------------------------------------------------------
-min:
-  html:         false
-  svg:          true
-  css:          false
-  js:           true
-  image:        true
+  # MAIN FILES FOR BUILD ----------------------------------------------------------------------------------------------
+  mainFiles:
+    markup:       index.twig
+    style:        style.scss
+    script:       main.js
 
-# SERVER STARTING AND BROWSER SYNCHRONIZATION -------------------------------------------------------------------------
-browserSync:
-  server:
-    baseDir:    'build/'
-#    index:      pablic.html
-#    directory:  true
-#  tunnel:       true
-#  host:         myhost
-#  port:         9000
-#  proxy:        yourlocal.dev
-  logPrefix:    BROWSER
+  # BUILT FILES MINIMIZATION ------------------------------------------------------------------------------------------
+  min:
+    html:         false
+    svg:          true
+    css:          false
+    js:           true
+    image:        true
 
-# CDN REFERENCES FOR STYLES -------------------------------------------------------------------------------------------
-stylesCDNs:
-  - //fonts.googleapis.com/css?family=Roboto:400,300
-  # https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css
-  # https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css
+  # CDN REFERENCES FOR STYLES -----------------------------------------------------------------------------------------
+  stylesCDNs:
+    - //fonts.googleapis.com/css?family=Roboto:400,300
+    # https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css
+    # https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.min.css
 
-# CDN REFERENCES FOR SCRIPTS ------------------------------------------------------------------------------------------
-scriptsCDNs:
-  # https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js
-  # https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js
+  # CDN REFERENCES FOR SCRIPTS ----------------------------------------------------------------------------------------
+  scriptsCDNs:
+    # https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js
+    # https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js
 
-# MAIN FILES FOR PARSING ----------------------------------------------------------------------------------------------
-mainFiles:
-  markup:       index.twig
-  style:        style.scss
-  script:       main.js
 
-# DESTINATION FOLDERS FOR BUILT FILES ---------------------------------------------------------------------------------
-dest:
-  public:       'public'
-  build:        'build'
-  markup:       'build'
-  style:        'build'
-  script:       'build'
-  image:        'build/img'
-  inlineSvg:    'build/imgi'
-  map:          './maps'
+################################################## PLUGINS SETTINGS ###################################################
 
-# FOLDERS OF SOURCE FILES FOR BUILDING --------------------------------------------------------------------------------
-src:
-  markup:       'src/markup/**/*.twig'
-  style:        'src/styles/**/*.scss'
-  script:       'src/scripts/**/*.js'
-  image:        ['src/images/**/*.*', '!src/images/inline/**']
-  inlineSvg:    'src/images/inline/**/*.svg'
+plg:
+  # VENDOR PREFIX AUTO ADDING SETTINGS --------------------------------------------------------------------------------
+  autoprefixer:
+    browsers:     [last 2 versions, safari 5, ie 8, ie 9, opera 12.1, ios 6, android 4]
+    cascade:      false
+
+  # SERVER STARTING AND BROWSER SYNCHRONIZATION -----------------------------------------------------------------------
+  browserSync:
+    server:
+      baseDir:    'build/'
+  #    index:      pablic.html
+  #    directory:  true
+  #  tunnel:       true
+  #  host:         myhost
+  #  port:         9000
+  #  proxy:        yourlocal.dev
+    logPrefix:    BROWSER
+
+
+################################################ DIRECTORIES SETTINGS #################################################
+
+dir:
+  # DESTINATION DIRECTORIES FOR BUILT FILES ---------------------------------------------------------------------------
+  dest:
+    public:       'public'
+    build:        'build'
+    markup:       'build'
+    style:        'build'
+    script:       'build'
+    image:        'build/img'
+    inlineSvg:    'build/imgi'
+    sourceMap:    './maps'
+
+  # DIRECTORIES OF SOURCE FILES FOR BUILDING --------------------------------------------------------------------------
+  src:
+    markup:       'src/markup/**/*.twig'
+    style:        'src/styles/**/*.scss'
+    script:       'src/scripts/**/*.js'
+    image:        ['src/images/**/*.*', '!src/images/inline/**']
+    inlineSvg:    'src/images/inline/**/*.svg'
