--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name":         "trueFrontend",
-  "version":      "0.5.0",
+  "version":      "1.0.0",
   "description":  "trueFontend is an automatic system for build html, svg, css, and javascript based projects",
   "author":       "ma1oy",
   "license":      "MIT",
   "devDependencies": {
     "babel-core":          ">=6.7.7",
     "babel-preset-es2015": ">=6.6.0",
+    "gulp-babel":          ">=6.1.2",
     "yamljs":              ">=0.2.7",
     "browser-sync":        "~2.12.3",
     "imagemin-pngquant":   "^4.2.2",
@@ -17,7 +18,6 @@
     "gulp-if":             "^2.0.0",
     "gulp-imagemin":       "^2.2.1",
     "gulp-rename":         "^1.2.2",
-    "gulp-rigger":         "^0.5.8",
     "gulp-sass":           "^2.3.1",
     "gulp-sourcemaps":     ">=2.0.0-alpha",
     "gulp-svgmin":         ">=1.2.2",
