--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name":         "trueFrontend",
-  "version":      "1.0.0",
-  "description":  "trueFontend is an automatic system for build html, svg, css, and javascript based projects",
-  "author":       "ma1oy",
-  "license":      "MIT",
-  "devDependencies": {
-    "babel-core":          ">=6.7.7",
+  "name": "trueFrontend",
+  "version": "1.1.0",
+  "description": "trueFontend is an automatic system for build html, svg, css, and javascript based projects",
+  "author": "ma1oy",
+  "license": "MIT",
+  "dependencies": {
+
+    "babel-core": ">=6.7.7",
     "babel-preset-es2015": ">=6.6.0",
-    "gulp-babel":          ">=6.1.2",
-    "yamljs":              ">=0.2.7",
-    "browser-sync":        "~2.12.3",
-    "imagemin-pngquant":   "^4.2.2",
-    "del":                 "^2.2.0",
-    "gulp-autoprefixer":   "^3.1.0",
-    "gulp-clean-css":      ">=2.0.6",
-    "gulp-htmlmin":        "^1.3.0",
-    "gulp-if":             "^2.0.0",
-    "gulp-imagemin":       "^2.2.1",
-    "gulp-rename":         "^1.2.2",
-    "gulp-sass":           "^2.3.1",
-    "gulp-sourcemaps":     ">=2.0.0-alpha",
-    "gulp-svgmin":         ">=1.2.2",
-    "gulp-svgstore":       "^6.0.0",
-    "gulp-twig":           "^0.5.0",
-    "gulp-uglify":         ">=1.1.0"
+    "gulp-babel": ">=6.1.2",
+    "gulp-twig": "^0.5.0",
+    "gulp-sass": "^2.3.1",
+
+    "gulp": "github:gulpjs/gulp#4.0",
+    "yamljs": ">=0.2.7",
+    "del": "^2.2.0",
+    "imagemin-pngquant": "^4.2.2",
+    "browser-sync": "~2.12.3",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-clean-css": ">=2.0.6",
+    "gulp-uglify": ">=1.1.0",
+    "gulp-svgmin": ">=1.2.2",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-svgstore": "^6.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": ">=2.0.0-alpha"
   }
 }
