--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trueFrontend",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "trueFontend is an automatic system for build html, svg, css, and javascript based projects",
   "author": "ma1oy",
   "license": "MIT",
@@ -10,6 +10,7 @@
     "babel-preset-es2015": ">=6.6.0",
     "gulp-babel": ">=6.1.2",
     "gulp-twig": "^0.5.0",
+    "node-sass": "^3.7.0",
     "gulp-sass": "^2.3.1",
 
     "gulp": "github:gulpjs/gulp#4.0",
