--- a/config.yml
+++ b/config.yml
@@ -12,17 +12,48 @@ prj:
     babel:
       presets:    [es2015]
 
-  mcb: # BUILT FILES SETTINGS -----------------------------------------------------------------------------------------
-      # -----------min---clean---build
-      html:       [true,  true,  true ]
-      css:        [false, true,  true ]
-      js:         [true,  true,  true ]
-      svg:        [true,  true,  false]
-      img:        [true,  false, false]
+  mcbw: # BUILT FILES SETTINGS -----------------------------------------------------------------------------------------
+      # ----min--clean-build-watch
+      html: [1,    1,    1,    1]
+      css:  [1,    1,    1,    1]
+      js:   [1,    1,    1,    1]
+      svg:  [1,    1,    0,    0]
+      img:  [1,    0,    0,    0]
 
 ################################################## PLUGINS SETTINGS ###################################################
 
 plg:
+  htmlmin:
+    collapseWhitespace: true
+
+  cleanCss:
+    compatibility: 'ie8'
+
+  uglify:
+
+  svgmin:
+    js2svg:
+#      pretty: true
+    plugins:
+#      - removeDoctype: false
+#      - removeComments: false
+#      - cleanupNumericValues:
+#          floatPrecision: 2
+#      - convertColors:
+#          names2hex: false
+#          rgb2hex: false
+
+  imagemin:
+    progressive: true
+    svgoPlugins:
+      - removeViewBox: false
+#    use: imageminPngquant()
+    interlaced: true
+
+
+  svgstore:
+    inlineSvg: true
+
   del: # DELETE SETTINGS ---------------------------------------------------------------------------------------------
 #    force:        true # allow deleting the current working directory and files/folders outside it
 #    dryRun:       true # see what would be deleted
@@ -55,13 +86,13 @@ dir:
 
   src: # DIRECTORIES OF SOURCE FILES FOR BUILDING --------------------------------------------------------------------
     html:         'src/templates/**/*.html'
-    css:          'src/css/**/*.scss'
+    css:          'src/css/style.scss'
     js:           'src/js/**/*.js'
     svg:          'src/img/inline/**/*.svg'
     img:          ['src/img/**/*.*', '!src/img/inline/**']
 
   # will use src directories when commented
-#  watch: # DIRECTORIES OF FILES FOR WATCHING ------------------------------------------------------------------------
-#    html:         'templates/**/index.html'
-#    css:          'css/**/style.scss'
-#    js:           'js/**/main.js'
+  watch: # DIRECTORIES OF FILES FOR WATCHING -------------------------------------------------------------------------
+#    html:         'src/templates/**/index.html'
+    css:          'src/css/**/*.scss'
+#    js:           'src/js/**/main.js'
