--- a/package.json
+++ b/package.json
@@ -5,30 +5,27 @@
   "author": "ma1oy",
   "license": "MIT",
   "devDependencies": {
-
-    "babel-core": ">=6.7.7",
-    "babel-preset-es2015": ">=6.6.0",
-    "gulp-babel": ">=6.1.2",
-    "gulp-twig": "^0.5.0",
-    "node-sass": "^3.7.0",
-    "gulp-sass": "^2.3.1",
-
-    "through2": "^2.0.1",
-    "yamljs": ">=0.2.7",
-    "del": "^2.2.0",
-    "imagemin-pngquant": "^4.2.2",
-    "browser-sync": "~2.12.3",
-    "stream-combiner2": "^1.1.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^7.0.0-beta.0",
+    "browser-sync": "^2.18.13",
+    "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-clean-css": ">=2.0.7",
-    "gulp-uglify": ">=1.1.0",
-    "gulp-svgmin": ">=1.2.2",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-svgstore": "^6.0.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-clean-css": "^3.8.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": ">=2.0.0-alpha",
-    "gulp-notify": "2"
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-twig": "^1.1.1",
+    "gulp-uglify": "^3.0.0",
+    "imagemin-pngquant": "^5.0.1",
+    "node-sass": "^4.5.3",
+    "stream-combiner2": "^1.1.1",
+    "through2": "^2.0.3"
   }
 }
